# Specter-Intelligence

./: .gitignore  .specter_rules  ACTIVE_TASK.md  AGENTS.md  AGENT_STATE.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  README.md  README_SPECTER.md  RED_TEAM_TOOLKIT.md  SECURITY_AUDIT_REPORT.md  SELF_MANAGEMENT.md  SKILL.md  SKILL_PATTERNS.md  SOUL.md  SPECTER_TASKS.json  TASKS.md  TOOLS.md  USER.md  WEATHER_ARBITRAGE_REPORT.md  akash_deployment.yml  alpha_scraper.py  autonomous_log_2026-02-20.md  clawlancer_autoclaim.md  clawlancer_credentials.json  marketing-plan.md  open_innovation_submission.json  openwork_submission.json  package-lock.json  package.json  rustchain-vuln-report.md  scanner.py  submission.json  superteam_credentials.json  xion_audit_findings.md
.clawhub/: lock.json
.openclaw/: workspace-state.json
clawguard/: scanner.py
docs/: amagasaki-core-principles.md  infrastructure-v2.md  operational-history-2026-02-20.md  opportunity-stack-2026-02-22.md
learnings/: LEARNINGS.md
memory/: 2026-02-01.md  2026-02-03.md  2026-02-19.md  2026-02-19.md.bak  2026-02-20.md  2026-02-21-compaction-2.md  2026-02-21-compaction.md  2026-02-21.md  2026-02-22-1245.md  2026-02-22.md  2026-02-23.md  2026-02-24.md  2026-02-25.md  2026-02-27.md  2026-02-28.md  BLOCKERS.md  OPPORTUNITIES.md  PRIORITY.md  REVENUE.md  data_products.md  marketplace_listings.md  template.md
reports/: MEESHO_RECON_2026-02-20.md
research/: ai-agent-marketplace-analysis.md  polish-solana-ecosystem.md
solana-escrow/: .gitignore  Cargo.toml  README.md
solana-escrow/src/: lib.rs  lib.rs.backup
(+48 files in other folders)
