[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2024"
description = "Solana on-chain escrow engine"
repository = "https://github.com/Specter-intelligence/solana-escrow"
license = "MIT"

[features]
no-entrypoint = []

[dependencies]
solana-program = "2.0"
arrayref = "0.3"
borsh = "0.9"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "2.0"
solana-sdk = "2.0"

[lib]
crate-type = ["cdylib", "lib"]